<resources>
    <string name="app_name">Sizey</string>


    <string name="email_start">이메일로 시작하기</string>
    <string name="naver_start">네이버로 시작하기</string>
    <string name="kakao_start">카카오로 시작하기</string>
    <string name="main_policy">시작하기를 누르면 <u>이용약관</u>에 동의합니다.</string>
    <string name="next">다음</string>
    <string name="password_policy">6자리 이상의 비밀번호</string>
    <string name="password_check">비밀번호를 확인</string>
    <string name="password">비밀번호</string>
    <string name="woman">여자</string>
    <string name="man">남자</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_alert">나중에도 설정 가능해요</string>
    <string name="nickname_policy">2자 이상의 닉네임</string>
    <string name="service_policy">서비스 이용약관</string>
    <string name="private_policy">개인정보취급방침</string>
    <string name="previous">이전</string>
    <string name="sign_up">회원가입</string>
    <string name="welcome">반갑습니다</string>
    <string name="height">키</string>
    <string name="weight">몸무게</string>
    <string name="height_weight_ex">000</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="go_sign_up">가입하기</string>
    <string name="policy">이용약관</string>
    <string name="compare_size">사이즈 비교</string>
    <string name="setting">설정</string>
    <string name="size">사이즈</string>


    <!-- kakao -->
    <string name="kakao_app_key">deb1b6f2d0d62f6dc74a9a4876693754</string>
    <!-- naver -->
    <string name="naver_app_id">hoKFoPP88o6CS80Hz1fQ</string>
    <string name="naver_app_secret">Q8eRAuTjHM</string>
    <string name="input_email">이메일을 입력하세요</string>
    <string name="input_pw">비밀번호를 입력해주세요</string>
    <string name="welcome1">welcome</string>


</resources>