<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_gender_woman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/toolbar_height"
        android:background="@drawable/unselected_btn"
        android:text="@string/woman"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_gender_man"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/toolbar_height"
        android:layout_marginRight="10dp"
        android:background="@drawable/unselected_btn"
        android:text="@string/man"
        app:layout_constraintRight_toLeftOf="@+id/btn_gender_woman"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_gender_man" />

    <TextView
        android:id="@+id/tv_nick_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname_alert"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_gender_man" />

    <EditText
        android:id="@+id/ed_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_ed"
        android:hint="@string/nickname_policy"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nick_alert" />

    <TextView
        android:id="@+id/tv_nick_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#ff0000"
        android:textSize="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_nick" />


</androidx.constraintlayout.widget.ConstraintLayout>
