<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_sign_up"
        layout="@layout/sign_up_toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_up_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_sign_up" />

    <EditText
        android:id="@+id/ed_sign_up_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_policy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_pw" />

    <TextView
        android:id="@+id/tv_sign_up_pw_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff0000"
        app:layout_constraintLeft_toLeftOf="ed_sign_up_pw"
        app:layout_constraintTop_toBottomOf="@+id/ed_sign_up_pw"
        tools:text="6자리 이상" />

    <TextView
        android:id="@+id/tv_sign_up_pw_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_check"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_pw_warning" />

    <EditText
        android:id="@+id/ed_sign_up_pw_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_policy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_pw_check" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
