<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_home_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_home_size_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/ed_home_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="search" />

        <Button
            android:id="@+id/btn_home_compare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compare_size" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_category"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_home_size" />

    <Button
        android:id="@+id/btn_home_size"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_home"
        android:text="@string/size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_home_setting"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/btn_home_setting"
        app:layout_constraintLeft_toRightOf="@+id/btn_home_size"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        android:id="@+id/fab_home_add_size"
        android:src="@drawable/plus_white_20"
        android:backgroundTint="@color/gray"
        app:borderWidth="0dp"
        />
    <Button
        android:id="@+id/btn_home_setting"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_home"
        android:text="@string/setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_home_size" />

</androidx.constraintlayout.widget.ConstraintLayout>