<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_none_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_main"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewpager_main"
        app:tabBackground="@drawable/tab_seletor"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp" />

    <Button
        android:id="@+id/btn_kakao_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kakao_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout_main"

        />

    <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
        android:id="@+id/btn_naver_start"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_kakao_start"

        />

    <Button
        android:id="@+id/btn_email_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/email_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_naver_start" />

    <TextView
        android:id="@+id/tv_main_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_policy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_email_start" />

</androidx.constraintlayout.widget.ConstraintLayout>
